--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,3 +3,13 @@
 ---
 
 @import 'modern-resume-theme';
+
+body {
+	background-color: #281f1f !important;
+	font-size:1.5rem !important;
+	/* line-height:1.5 !important; */
+}
+
+p {
+	font-size:1.75rem !important;
+}
